Add image up top

--- a/ignoremdsnap.html
+++ b/ignoremdsnap.html
@@ -4,8 +4,8 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="https://ahungry.github.io/awesome-bgmods/assets/css/style.css?v=75f6e66f96b2b91e4b2c43fbb3557c2fa98e7fa6" media="screen" type="text/css">
-    <link rel="stylesheet" href="https://ahungry.github.io//awesome-bgmods/assets/css/print.css" media="print" type="text/css">
+    <link rel="stylesheet" href="https://ahungry.github.io/awesome-bgmods/assets/css/style.css?v=53a98911dc93c694a99eff25e9e2c97f4c25a2d1" media="screen" type="text/css">
+    <link rel="stylesheet" href="https://ahungry.github.io/awesome-bgmods/assets/css/print.css" media="print" type="text/css">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -198,6 +198,7 @@ setup, but will work with a BG:EE setup, and the EET merge process
 will manage to include them.</p>
 
 <h3 id="sundrymiscellaneous">Sundry/Miscellaneous</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://forums.beamdog.com/discussion/71305/mod-dlc-merger-merge-steam-gog-sod-dlc-or-custom-dlcs-with-the-main-game">modmerge</a></p>
@@ -229,7 +230,10 @@ will manage to include them.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/bg1npcmusic.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="questsstory">Quests/Story</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://forums.beamdog.com/discussion/29969/drizzt-saga-v3-released-now-bgee-compatible">Drizzt Saga</a></p>
@@ -271,7 +275,10 @@ will manage to include them.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/bg1ub - Unfinished Business.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="characters">Characters</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://mirandir.baldursgateworld.fr/garrick-tt/">Garrick Tales of a Troubador</a></p>
@@ -333,7 +340,10 @@ will manage to include them.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Margarita.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="gameplay">Gameplay</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://forums.beamdog.com/discussion/23861/bg-ee-mod-saradas-magic-released-v-1-1">Saradas Magic</a></p>
@@ -345,11 +355,14 @@ will manage to include them.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Saradas Magic.png" alt="pic" />
 </div>
 
+</div>
+
 <h2 id="post-eet">Post-EET</h2>
 
 <p>Install/setup after EET</p>
 
 <h3 id="sundrymiscellaneous-1">Sundry/Miscellaneous</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://github.com/Gibberlings3/EET">EET</a></p>
@@ -451,7 +464,10 @@ will manage to include them.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/IWDification.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="ui-enhancement">UI Enhancement</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://github.com/tipun81/tipun_gui_mod/releases">Tipun GUI</a></p>
@@ -493,7 +509,10 @@ will manage to include them.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Recolored Buttons.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="item-packs">Item Packs</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://forums.beamdog.com/discussion/13314/mod-teambgs-armor-pack-for-bg-ee-bg2ee-bgt-amp-tutu/p1">TeamBG's Armor Pack</a></p>
@@ -615,7 +634,10 @@ will manage to include them.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Under Represented Items.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="questsstory-1">Quests/Story</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://forums.beamdog.com/discussion/82463/mod-bg1-npcs-for-soa-tob">BG1 NPC in SoA</a></p>
@@ -1217,7 +1239,10 @@ will manage to include them.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Trials of the Luremaster.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="characters-1">Characters</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://forums.beamdog.com/discussion/33291/tenya-thermidor-v1-5">Tenya Thermidor</a></p>
@@ -1859,10 +1884,14 @@ will manage to include them.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Shine on Caelar.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="position-dependent-questmegamod-portions">Position Dependent Quest/Megamod Portions</h3>
 
 <p>This includes a few items that should be installed after
 quests/characters, but still not quite end of order.</p>
+
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="http://www.shsforums.net/files/file/308-bp-bgt-worldmap/">BP BGT Worldmap</a></p>
@@ -1904,7 +1933,10 @@ quests/characters, but still not quite end of order.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Crossmod BG2.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="voice-packsportraits">Voice Packs/Portraits</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="">Portraits, Portraits Everywhere (PPE)</a></p>
@@ -1986,7 +2018,10 @@ quests/characters, but still not quite end of order.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/NWN Voices.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="gameplay-1">Gameplay</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="">Made In Heaven Item Pack</a></p>
@@ -2178,7 +2213,10 @@ quests/characters, but still not quite end of order.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Might and Guile.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="system-revisions">System Revisions</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="">EET End</a></p>
@@ -2190,7 +2228,10 @@ quests/characters, but still not quite end of order.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/EET End.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="tactics">Tactics</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://www.gibberlings3.net/mods/tweaks/scs/">Sword Coast Stratagems</a></p>
@@ -2212,7 +2253,10 @@ quests/characters, but still not quite end of order.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Enhanced Powergaming Scripts.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="tweaks">Tweaks</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://github.com/Gibberlings3/Tweaks-Anthology/releases">Tweaks Anthology (cdtweaks)</a></p>
@@ -2334,7 +2378,10 @@ quests/characters, but still not quite end of order.</p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Ahungry Tweaks.png" alt="pic" />
 </div>
 
+</div>
+
 <h3 id="end-of-order">End of Order</h3>
+<div class="container">
 
 <div class="mod-entry">
   <p><a href="https://github.com/UnearthedArcana/NPC_EE/releases">NPC EE</a></p>
@@ -2384,6 +2431,8 @@ quests/characters, but still not quite end of order.</p>
   </p>
 <p class="desc"></p>
 <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/Ahungry Deletefier.png" alt="pic" />
+</div>
+
 </div>
 
 
