Use a table view, with dynamic tag color

--- a/ignoremdsnap.html
+++ b/ignoremdsnap.html
@@ -200,6 +200,49 @@ will manage to include them.</p>
 <h3 id="sundrymiscellaneous">Sundry/Miscellaneous</h3>
 <div class="container">
 
+<div class="xmod-entry">
+  <table>
+    <tr>
+      <th>pic</th>
+      <th>title</th>
+      <th>desc</th>
+      <th>tags</th>
+    </tr>
+    <tr>
+      <td>
+        <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/modmerge.png" alt="pic" />
+      </td>
+      <td>modmerge</td>
+      <td>Necessary if you want to include BG:SOD in your BG:EET setup - less of a weidu mod and more of a mandatory tool to execute.</td>
+      <td>
+        <img src="https://img.shields.io/badge/dist-beamdog-purple?style=plastic" alt="dist" />
+        <img src="https://img.shields.io/badge/tag-required-purple?style=plastic" alt="required" />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/modmerge.png" alt="pic" />
+      </td>
+      <td>bg1npc</td>
+      <td>Adds WAY more banter/conversations with original BG1 npcs.</td>
+      <td>
+        <img src="https://img.shields.io/badge/dist-g3-purple?style=plastic" alt="dist" />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/modmerge.png" alt="pic" />
+      </td>
+      <td>bg1npcmusic</td>
+      <td>Background music to go with the banters (it'll play as the banter initiates).</td>
+      <td>
+        <img src="https://img.shields.io/badge/dist-g3-purple?style=plastic" alt="dist" />
+      </td>
+    </tr>
+  </table>
+  <br>
+  <br>
+  </div>
 <div class="mod-entry">
   <p><a href="https://forums.beamdog.com/discussion/71305/mod-dlc-merger-merge-steam-gog-sod-dlc-or-custom-dlcs-with-the-main-game">modmerge</a></p>
   <img src="https://ahungry.github.io/awesome-bgmods/ghpages/images/modmerge.png" alt="pic" />
