pretty good feature - resume state via url

--- a/ignoremdsnap.html
+++ b/ignoremdsnap.html
@@ -148,7 +148,7 @@ the mods in the Post-EET section may be good for a BG:EE as well
 reference - I will want to update them to the proper homepages vs
 direct download links, but you may find some of one or the other atm).</p>
 
-<h2 id="pre-eet">Pre-EET</h2>
+<h2 id="legend">Legend</h2>
 
 <p>Install/setup before EET.  Many of these lack an awareness of an EET
 setup, but will work with a BG:EE setup, and the EET merge process
